# GameTower

./: .gitignore  Backpack.cpp  Backpack.h  CMakeCache.txt  CMakeLists.txt  Creature.cpp  Creature.h  Description.md  GameTower.cbp  Hero.cpp  Hero.h  Init.h  Interface.h  Item.cpp  Item.h  Main.cpp  Makefile  Monster.cpp  Monster.h  README.md  cmake_install.cmake  init.h  location.h  main.cpp  map.h
.cmake/api/v1/reply/: cache-v2-9e4a6334e063a61dd80f.json  cache-v2-b63becfa64bf8082d61c.json  cache-v2-ce4a866a89377e64f119.json  cmakeFiles-v1-08b14576483bcac36c32.json  index-2023-08-29T10-25-57-0628.json  (+10 more)
Assets/: .Monster1  .Monster2  .Monster3  .Monster4  .Monster5  .avatar  .credit  .credit_logo  .fightScene  .help  .logo  .map  .map_path  .monsterDes  .monsterDescription  .welcome  .wordlistAttack  .wordlistDefence
Assets/Scene/: 剧情流程.txt  校门.txt  迎新大厅.txt
Assets/Scene/AfterFight/: 圣坛.txt  校门.txt  神秘的魔法墓地.txt  秘密会议室.txt  迎新大厅.txt
Assets/Scene/Background/: 圣坛.txt  庆功宴会厅.txt  战前准备营地.txt  校门.txt  神秘的魔法墓地.txt  秘密会议室.txt  迎新大厅.txt
Assets/Scene/BeforeFight/: 圣坛.txt  校门.txt  神秘的魔法墓地.txt  秘密会议室.txt  迎新大厅.txt
Assets/Scene/Default/: 圣坛.txt  庆功宴会厅.txt  战前准备营地.txt  校门.txt  神秘的魔法墓地.txt  秘密会议室.txt  迎新大厅.txt
Assets/Scene/Other/: 决战信息.txt  决战后的圣坛.txt  去看看吧.txt  失败.txt  战斗意志.txt  探险前.txt  胜利.txt  营地未建立.txt  进迎新大厅前.txt  进门前.txt
include/: json.hpp
src/: Backpack.h  Behavior.h  Creature.h  Data.h  FightScene.cpp  FightScene.h  Hero.cpp  Init.h  Interface.h  Item.h  Location.h  Main.cpp  Map.h  Monster.cpp  Monster.h  Player.h  Word.cpp  Word.h
src/utils/: rand.cpp  rand.h
